# wot-replay-api

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: error.rs  graphql_schema.rs  main.rs  replay_query.rs
src/input/: battle_information.rs  battle_informations.rs  battle_results.rs  mod.rs
src/output/: map.rs  mod.rs  nation.rs  player.rs  score.rs  server.rs  vehicle.rs  version.rs
src/scalars/: mod.rs  u64.rs
