[package]
name = "wot-replay-api"
version = "0.1.0"
edition = "2021"

[dependencies]
juniper = "0.15"
wot_replay_parser = "0.2"
actix-web = "4"
serde = "1"
serde_json = "1"
serde_derive = "1"
actix-cors = "0.6"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }
thiserror = "1"
wot_extractor = { git = "https://github.com/Gabouchet/wot-extractor" }